2020-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-file-system-info): Fix error.

	* tramp-sh.el (tramp-sh-extra-args): Add "-noediting" as bash arg.
	(tramp-open-shell):  Provide proper "~/.editrc" if needed.  Bug#39399

2020-02-04  Mattias Engdegård  <mattiase@acm.org>

	* tramp-cache.el (tramp-flush-connection-properties)
	(tramp-list-connections): Replace add-to-list with push.  (Bug#39373)

2020-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command):
	Handle `shell-command-dont-erase-buffer'.  (Bug#39067)

2020-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.1 released.

2020-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-parse-file): Use `insert-file-contents-literally'.
	(tramp-handle-shell-command): Reorganize error-buffer handling.
	Set `default-directory'.  (Bug#39253)
	(tramp-handle-start-file-process): Use `consp' instead of `listp'.

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-cache.el (top):
	* tramp-sh.el (tramp-sh-handle-make-process):
	Use `insert-file-contents-literally'.

2020-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message, tramp-file-name-handler):
	Don't support threads.
	(tramp-mutex, tramp-get-mutex): Remove.

	* tramp-cache.el (tramp-cache-print): Don't support threads.

	* tramp-compat.el (tramp-compat-main-thread)
	(tramp-compat-current-thread, tramp-compat-thread-yield)
	(tramp-compat-with-mutex): Remove.

	* tramp-ftp.el (ange-ftp-ftp-process-buffer): Don't declare.
	(tramp-ftp-file-name-handler): Don't support threads.

2020-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Update stderr buffer
	when process has finished.  Do not call `auto-revert'.

2020-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-hexdump-encode, tramp-hexdump-awk-encode)