@@ -1,9 +1,13 @@
+2020-02-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-open-shell): Read prompt when moving "~/.editrc".
+
 2020-02-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-gvfs.el (tramp-gvfs-handle-file-system-info): Fix error.
 
 	* tramp-sh.el (tramp-sh-extra-args): Add "-noediting" as bash arg.
-	(tramp-open-shell):  Provide proper "~/.editrc" if needed.  Bug#39399
+	(tramp-open-shell):  Provide proper "~/.editrc" if needed.  (Bug#39399)
 
 2020-02-04  Mattias Engdegård  <mattiase@acm.org>
 
